Fix clipped descenders in FF on story name input (#118562575)

--- a/static/less/builder.less
+++ b/static/less/builder.less
@@ -281,8 +281,8 @@ button.help {
   input[name="byline"] {
     float: left;
     width: 480px;
-    height: 36px;
-    margin-top: 14px;
+    height: auto;
+    margin-top: 8px;
     margin-right: 10px;
   }
 
